--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <style>
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .hideScrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE and Edge */
+    .hideScrollbar {
+      -ms-overflow-style: none;
+    }
+  </style>
 </head>
 
 <body>
